--- a/music.html
+++ b/music.html
@@ -9,10 +9,10 @@
 <body>
 
 <!-- NAVBAR MATCHING LIGHT PURPLE THEME -->
-<nav class="nav-bar">
-  <a href="fitness.html">Fitness</a>
-  <a href="finance.html">Finance</a>
-  <a href="faith.html">Faith</a>
+<nav style="background-color:#333;padding:10px;">
+  <a href="fitness.html" style="color:white;margin-right:10px;text-decoration:none;">Fitness</a>
+  <a href="finance.html" style="color:white;margin-right:10px;text-decoration:none;">Finance</a>
+  <a href="faith.html" style="color:white;margin-right:10px;text-decoration:none;">Faith</a>
 </nav>
 
 <h1>Music Hub</h1>
